test_data/Xml/Unexpected/Unserializable/InvalidClassName/specificAssetId/wrong.xml.exception
Expected an element representing an instance of class SpecificAssetId with element name specificAssetId, but got: utterlyInvalid at: the beginning